# kairos

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  implementation-plan.md  relation-registry.md  session-2026-07-20.md  tli-implementation-plan.md  tli.md  v0.1-audit.md  v0.1-release-plan.md  v0.1-status.md  v0.2-alpha-status.md
scripts/: demo.sh  verify_install.sh
src/kairos/: __init__.py  tool.py
src/kairos/cli/: __init__.py  citation.py  errors.py  main.py
src/kairos/cli/commands/: __init__.py  artifacts.py  config.py  demo.py  doctor.py  ingest.py  init.py  logs.py  note.py  search.py  show.py  trace.py  tui.py  well.py
src/kairos/domain/: __init__.py  enums.py  errors.py  ids.py  json_types.py  locators.py  models.py  parser.py
src/kairos/infrastructure/: __init__.py
src/kairos/infrastructure/database/: __init__.py  engine.py  fts.py  migrate.py  orm.py  repositories.py
src/kairos/infrastructure/database/migrations/: env.py
src/kairos/infrastructure/database/migrations/versions/: 0001_initial_schema.py
src/kairos/infrastructure/filesystem/: __init__.py  content_store.py  workspace.py
src/kairos/infrastructure/git/: __init__.py  metadata.py
src/kairos/infrastructure/parsers/: __init__.py  json_parser.py  kconfig.py  logs.py  pdf.py  registry.py  repository_files.py  text_markdown.py
src/kairos/schemas/: __init__.py  activity.py  artifact.py  config.py  dashboard.py  doctor.py  ingest.py  logs.py  note.py  provenance.py  search.py  trace.py  well.py
src/kairos/services/: __init__.py  activity.py  artifacts.py  config_query.py  context.py  doctor.py  events.py  ingest.py  logs_query.py  notes.py  search.py  show.py  target_resolution.py  trace.py  wells.py  wells_scope.py  workspace_init.py
src/kairos/tui/: __init__.py  app.py  commands.py  controller.py  state.py
src/kairos/tui/screens/: fuzzy_finder.py  help.py  main.py  tutorial.py  well_picker.py
src/kairos/tui/styles/: kairos.tcss
src/kairos/tui/widgets/: command_line.py  evidence_pane.py  explorer_pane.py  header_line.py  status_line.py  tab_bar.py  workspace_pane.py
tests/fixtures/json/: sample.json
tests/fixtures/kconfig/: sample_menu.json
tests/fixtures/pdf/: generate_sample_pdf.py
tests/fixtures/repo/: consumer.py  sample.py
tests/fixtures/text/: sample.md  sample.txt  sample2.md
tests/integration/: conftest.py  test_cli_config_logs.py  test_cli_doctor.py  test_cli_ingest_search_show.py  test_cli_note_well.py  test_cli_trace.py  test_cli_version.py  test_exit_code_taxonomy.py  test_fts_referential_integrity.py  test_no_false_relations.py  test_offline.py  test_provenance_completeness.py  test_source_immutability.py
tests/tui/: conftest.py  test_app.py  test_controller.py  test_optional_dependency.py
tests/unit/: test_architecture_boundaries.py  test_content_store.py  test_locators.py  test_parsers_json.py  test_parsers_kconfig.py  test_parsers_logs.py  test_parsers_pdf.py  test_parsers_repository.py  test_parsers_text.py  test_relation_registry_consistency.py
