[project]
name = "kairos"
version = "0.1.1"
description = "KAIROS Framework — a local-first, terminal-native substrate for a single persistent agent runtime."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jacob Smith" }]
keywords = [
    "local-first",
    "cli",
    "knowledge-management",
    "provenance",
    "sqlite",
    "full-text-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "pydantic>=2.7,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "pypdf>=4.2,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "pyright>=1.1,<2.0",
    "build>=1.2,<2.0",
    # Needed as importable packages (not just build-system requirements) so
    # `python -m build --no-isolation` doesn't need to fetch them into a
    # fresh isolated build env over the network — see scripts/verify_install.sh
    # and .github/workflows/ci.yml's Build step.
    "setuptools>=68",
    "wheel",
]
# Optional: `kairos tui` (the Terminal Lineage Interface, v0.2-alpha). The
# base install and every other command work with this extra absent — see
# src/kairos/cli/commands/tui.py's find_spec guard and docs/tli.md.
tui = [
    "textual>=0.58,<1.0",
]
# Test-only: driving KairosApp through Textual's headless Pilot needs an
# async test runner. Only required to run tests/tui/test_app.py; the rest
# of the suite (and the base install) is unaffected by its absence.
tui-test = [
    "pytest-asyncio>=0.24,<1.0",
]
# Everything: base + CLI extras + TUI + dev tools. One command to get the
# full KAIROS experience.
all = [
    "kairos[dev]",
    "kairos[tui]",
    "kairos[tui-test]",
]

[project.scripts]
kairos = "kairos.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Alembic's script.py.mako is a template consulted only by `alembic
# revision` (a development-time command KAIROS itself never invokes --
# `kairos init` only calls `alembic.command.upgrade`, which reads env.py
# and versions/ directly). Not required for any KAIROS command to run, but
# included for packaging completeness: setuptools only auto-includes .py
# files inside discovered packages, so a non-.py file needs an explicit entry.
kairos = ["infrastructure/database/migrations/script.py.mako"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Imports of kairos.tui.* must follow the importorskip guards (Textual/
# pytest-asyncio may be absent) — see the module docstring in test_app.py.
"tests/tui/test_app.py" = ["E402"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["tests/fixtures"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingImports = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
